# fitness-tracker

./: .gitignore  README.md  azure-pipelines.yml  pyproject.toml  requirement.txt  requirements.txt  startup.sh  todo.md
.github/workflows/: azure-static-web-apps-proud-mushroom-0ee259d0f.yml
azure/: score.py
src/backend/: main.py
src/backend/database/handler/: create_db.py  db.py  fitness_tracker.db
src/backend/database/models/: models.py
src/backend/ml/: train.py
src/backend/ml/data/: data.csv
src/backend/models/: metrics.py
src/backend/tests/: test_api.py  tests.py
src/frontend/wellness-frontend/: .gitignore  package-lock.json  package.json  staticwebapp.config.json  swa-cli.config.json
src/frontend/wellness-frontend/src/: App.jsx
src/frontend/wellness-frontend/src/components/: WellnessApp.jsx
terraform/: main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
