[tool.poetry]
name = "fitness-tracker"
version = "0.1.0"
description = ""
authors = ["ahmed <ahmed@opsci.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.14"
fastapi = {extras = ["standard"], version = "^0.115.6"}
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
